--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 <h2> Petrus Information Technologies </h2>
 
-<h4> Software and scientific consultancy, </h4>
+<h4> Software and scientific consultancy </h4>
 
 </body>
 </html>
