restore old site

--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Services - Petrus IT</title>
+    <title>Contact - Petrus IT</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="author" content="Copyright 2009-2016 Petrus Information Technologies"/>
     <link rel="icon" href="/favicon.ico" type="image/x-icon" />
@@ -30,30 +30,14 @@
     </ul>
 </nav>
 
-<h3> Services </h3>
+<h3> Contact </h3>
 
-<p>We provide customized IT solutions for business and academia in areas
-where <i>off the shelf</i> software adequately addressing the problem
-does not exist or suitable services are hard to find.  </p>
+<p> <strong>Email:</strong>
+    &nbsp; <a href="mailto:info@PetrusIT.com"> info@PetrusIT.com </a>
+</p>
 
-<ul>
-
-    <li>Web applications, Internet services</li>
-
-    <li>Data science</li>
-    <li>Business intelligence</li>
-
-    <li>Operations research</li>
-    <li>High performance and scientific computing</li>
-
-    <li>IT infrastructure and security</li>
-</ul>
-
-<p> Have you not found the buzzword you were looking for?  Don't be
-discouraged, <a href="/contact.html">contact</a> us regardless. Chances
-are we might be able to help you. </p>
+<p> Petrus IT is located in Halifax, NS, Canada. </p>
 
 </div>
 </body>
 </html>
-
